# hopfield

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yaml
src/: main.py
src/hopfield/: DataProcess.py  Network.py
