[project]
name = "hopfield"
version = "0.1.0"
description = "Implement Hopfield network using Numpy"
readme = "README.md"
authors = [
	{ name = "hermeschen1116", email = "108386417+hermeschen1116@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "tk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
	"commitizen>=4.1.0",
	"pip>=24.3.1",
	"pyinstaller>=6.11.1",
	"setuptools>=75.6.0",
	"wheel>=0.45.1",
]
